chore: make sure that submit button on search form isn't visible

--- a/assets/scss/elements/_form-elements.scss
+++ b/assets/scss/elements/_form-elements.scss
@@ -59,7 +59,7 @@
     right: 0;
     bottom: 0;
     position: absolute;
-    color: transparent;
+    color: transparent !important;
     background: 0 0;
 	min-width: 45px;
     width: 45px;
